--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
-  "name": "andresjosehr-portfolio",
+  "name": "PortfolioNabilHjeiji",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build-portfolio": "ng build --configuration production",
-    "build:prod": "ng build --configuration production --base-href https://andresjosehr.com/",
-    "deploy": "npm run build:prod && ngh --dir=dist/andresjosehr-portfolio --cname=andresjosehr.com",
-    "deploy:ci": "ngh --dir=dist/andresjosehr-portfolio --cname=andresjosehr.com --no-silent",
-    "predeploy": "npm run build:prod",
+    "build:prod": "ng build --configuration production --base-href https://www.apartiguetat.io/",
+    "deploy": "npm run build:prod && ngh --dir=dist/PortfolioNabilHjeiji --cname=www.apartiguetat.io",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
-  },
+  }
+,
+
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.9",
